# 18th-chichi

./: .env_table  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
accounts/: urls.py  views.py
categories/: models.py  urls.py  views.py
categories/migrations/: 0001_initial.py
comments/: models.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_project.py  0003_comment_account.py  0003_comment_user.py
comments_replies/: apps.py  models.py  urls.py  views.py
comments_replies/migrations/: 0001_initial.py  0002_commentsreplies_account.py  0002_commentsreplies_account_commentsreplies_comment.py  0002_commentsreplies_comment.py  0003_alter_commentsreplies_account.py
core/: settings.py  urls.py
faqs/: forms.py  models.py  urls.py  views.py
faqs/migrations/: 0001_initial.py  0002_faq_project.py
homepages/: urls.py  views.py
pledges/: apps.py  forms.py  models.py  urls.py  views.py
pledges/migrations/: 0001_initial.py
projects/: forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_collectproject_project_collect_account.py  0002_project_account.py  0003_project_account.py  0004_favoriteprject_project_favorite_users.py  0004_project_status.py  0004_project_subcategories.py  0005_project_category.py
rewards/: forms.py  models.py  urls.py  views.py
static/scripts/: app.js
subcategories/: models.py  urls.py  views.py
update_records/: apps.py  forms.py  models.py  urls.py  views.py
users/: forms.py  models.py  urls.py  views.py
(+56 files in other folders)
