[tool.poetry]
name = "chichi"
version = "0.1.0"
description = ""
authors = ["IanYang1106 <monoyen2001@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
mysqlclient = "^2.2.6"
django-environ = "^0.11.2"
pillow = "^11.0.0"
requests = "^2.32.3"
django-allauth = "^65.3.0"
cryptography = "^44.0.0"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
